<resources>
    <string name="app_name">NextStep</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_fields_are_required">All fields are required!</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address!</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters!</string>
    <string name="login_failed">Login failed</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="registration_failed">Registration failed</string>
    <string name="no_email_found">No email found</string>
    <string name="language_changed_to">Language changed to %1$s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_underline"><u>Sign up</u></string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="i_already_have_an_account_underline"><u>I Already Have An Account</u></string>
    <string name="username">Username</string>
    <string name="field_is_empty">Field is empty!</string>
    <string name="nickname_must_be_no_longer_than_20_characters">Nickname must be no longer than 20 characters</string>
    <string name="nickname_can_only_contain_letters_numbers_and_underscores">Nickname can only contain letters, numbers, and underscores</string>
    <string name="password_should_be_at_least_8_characters">Password should be at least 8 characters!</string>
    <string name="password_must_contain_at_least_one_letter_and_one_digit">Password must contain at least one letter and one digit!</string>
    <string name="invalid_email_format">Invalid email format!</string>
    <string name="username_must_be_at_least_4_characters">Username must be at least 4 characters</string>
    <string name="password_visibility_icon">password visibility icon</string>

    <string name="error_network">There seems to be a problem with your network connection. Please check your internet.</string>
    <string name="error_timeout">The request timed out. Please try again.</string>

    <string name="error_unauthorized">You are not authorized to perform this action. Please log in.</string>
    <string name="error_forbidden">You don\'t have permission to access this resource.</string>
    <string name="error_conflict">There was a conflict with the request. Please try again.</string>
    <string name="error_not_found">The requested resource was not found. Please try again later.</string>
    <string name="error_server">We\'re experiencing technical difficulties. Please try again later.</string>
    <string name="error_service_unavailable">The service is currently unavailable. Please try again later.</string>
    <string name="error_unknown">An unknown error occurred. Please try again.</string>
    <string name="error_custom_message">An error occurred: %1$s</string>
    <string name="error_user_not_found">User does not exist. Please check your credentials.</string>
    <string name="error_invalid_credentials">Invalid credentials. Please try again.</string>
    <string name="error_user_already_exists">User already exists. Please use a different email.</string>
    <string name="invalid_format">Invalid format</string>

    <string name="default_web_client_id">542027497505-bia3eg08098is83l6nih4dimgn6ohj3k.apps.googleusercontent.com</string>
    <string name="paul_sheldon_goal">After a devastating car crash in the Colorado mountains, I’ve found myself isolated with no choice but to resurrect a character I already said goodbye to — Misery Chastain. My number one fan insists this book be written… or else.</string>
    <string name="fire">Fire</string>
    <string name="heart">Heart</string>
    <string name="cookie">Cookie</string>
    <string name="cheer">Cheer</string>
    <string name="well_done">Well Done!</string>
    <string name="react">React</string>
    <string name="dissapointed">Dissapointed</string>
    <string name="follow">+ Follow</string>
    <string name="followed">✅ Followed</string>


    <string name="goal_will_be_uploaded_in_background">Goal will be uploaded in the background when connection is available</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_image">Select Image</string>

    <string name="no_milestones_message">No milestones available</string>
    <string name="cooked">Cooked</string>
    <string name="reacted_to_your_post">Reacted to your post</string>
    <string name="commented_on_your_post">Commented on your post</string>
    <string name="started_following_you">started following you</string>
    <string name="done_icon">Done Icon</string>
    <string name="proceed_with_goal_completion">Proceed with goal completion?</string>
    <string name="return_button">Return Button</string>
    <string name="complete_goal">Complete Goal! 🎯</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="cancel">Cancel</string>
    <string name="created_new_goal">Goal</string>
    <string name="achieved_new_milestone">Achieved new milestone</string>
    <string name="completed_goal">Completed Goal!</string>
    <string name="system">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="en">EN</string>
    <string name="english">English</string>
    <string name="georgian">Georgian</string>
    <string name="settings">Settings</string>
    <string name="app_theme">App Theme</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="sure">Sure! 🎯</string>
    <string name="nope_still_grinding">Nope, still grinding 💪</string>
    <string name="goal">goal</string>
    <string name="create_goal">Create Goal</string>
    <string name="target_date">Target date</string>
    <string name="imagee">Image</string>
    <string name="add_image">Add Image</string>
    <string name="do_you_want_to_add_metric">Do you want to add metric?</string>
    <string name="target_value">Target value</string>
    <string name="unit_e_g_kg_km">Unit (e.g. kg, km)</string>
    <string name="do_you_want_to_add_milestones">Do you want to add milestones?</string>
    <string name="minus">Minus</string>
    <string name="create_goall">Create Goal 🎯</string>
    <string name="add">Add</string>

    <string name="no_comments_yet">No comments yet...</string>
    <string name="add_a_comment">gitAdd a comment...</string>

    <string name="complete_goall">Complete Goal</string>
    <string name="goal_title">Goal Title</string>

    <string name="goal_completed_nwe_are_proud_of_you_champ">Goal Completed\nWe are proud of you champ!</string>
    <string name="continuee">Continue 💪</string>

    <string name="global">Global</string>
    <string name="following">Following</string>

    <string name="milestones">Milestones</string>

    <string name="notifications">Notifications</string>

    <string name="post_milestone">Post Milestone 🎯</string>

    <string name="goals">Goals:</string>
    <string name="followw">+ Follow</string>

    <string name="checking_session">Checking Session</string>

    <string name="search_users">Search users...</string>

    <string name="comments">Comments:</string>

    <string name="acihved">acihved</string>
    <string name="mark_as_done">Mark as Done</string>
    <string name="post">post</string>

    <string name="today_23_15">Today 23:15</string>

    <string name="milestone">Milestone</string>

    <string name="follow_goal">+ Follow Goal</string>
    <string name="commentss">Comments:</string>
    <string name="reactt">React</string>
    <string name="commentt">Comment</string>

    <string name="active">ACTIVE</string>

    <string name="done">Done</string>
    <string name="failed">Failed</string>

    <string name="settings_title">Settings</string>
    <string name="switch_to_english">Switch to English</string>
    <string name="switch_to_georgian">Switch to Georgian</string>

    <string name="battery_low_switched_to_dark_mode">Battery low — switched to dark mode</string>
    <string name="reset_email_sent_check_your_inbox">Reset email sent. Check your inbox!</string>
    <string name="failed_to_send_reset_email">Failed to send reset email.</string>
    <string name="no_goals_yet">No Goals Yet...</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_the_request">Send the request</string>
    <string name="did_you_forgot_the_password">Did you forgot the password?</string>
    <string name="reset_here">Reset here</string>
    <string name="faileddd">Failed</string>
    <string name="not_achieved_yet">Not Achieved Yet</string>

    <string name="Active">Active</string>
    <string name="Failed">Failed</string>
    <string name="Complete">Complete</string>

</resources>