<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/distance_lg"
    android:fillViewport="true"
    tools:context=".presentation.screen.main.add.AddGoalFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_goal"
            android:textSize="@dimen/title_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlGoalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/pd_screen_horizontal"
            android:layout_marginTop="@dimen/distance_md"
            android:hint="@string/goal"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGoalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlGoalDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/pd_screen_horizontal"
            android:layout_marginTop="@dimen/distance_md"
            android:hint="@string/description"
            app:layout_constraintTop_toBottomOf="@id/tlGoalTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGoalDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlTargetDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/pd_screen_horizontal"
            android:layout_marginTop="@dimen/distance_md"
            android:hint="@string/target_date"
            app:layout_constraintTop_toBottomOf="@id/tlGoalDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTargetDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPreview"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/distance_sm"
            android:layout_marginEnd="20dp"
            android:src="@drawable/place_holder"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlTargetDate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvImageError"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/ivPreview"
            app:layout_constraintStart_toStartOf="@id/ivPreview"
            android:text="Error"
            android:textColor="@color/md_theme_error"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSelectImage"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pd_screen_horizontal"
            android:layout_marginTop="@dimen/distance_sm"
            android:text="@string/add_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvImageError" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelImage"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/pd_screen_horizontal"
            android:enabled="false"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnSelectImage" />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchMileStones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_md"
            android:text="@string/do_you_want_to_add_milestones"
            app:layout_constraintStart_toStartOf="@id/tlTargetDate"
            app:layout_constraintTop_toBottomOf="@id/btnSelectImage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnForAddAndMinusMileStoneEts"
            app:layout_constraintTop_toBottomOf="@+id/switchMileStones" />

        <LinearLayout
            android:id="@+id/btnForAddAndMinusMileStoneEts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="@dimen/pd_screen_horizontal"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/recycler">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addMileStoneEditText"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/distance_sm"
                android:layout_height="wrap_content"
                android:text="@string/add" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minusMileStoneEditText"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

        </LinearLayout>

        <View
            android:id="@+id/viewSpace"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/btnForAddAndMinusMileStoneEts"
            android:layout_width="match_parent"
            android:layout_height="200dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateGoal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_md"
            android:paddingVertical="@dimen/btn_vertical_padding"
            android:text="@string/create_goall"
            android:textAllCaps="false"
            android:textSize="@dimen/body_regular"
            app:layout_constraintEnd_toEndOf="@id/tlGoalTitle"
            app:layout_constraintStart_toStartOf="@id/tlGoalTitle"
            app:layout_constraintTop_toBottomOf="@id/viewSpace" />


        <include
            android:id="@+id/loaderAddGoal"
            layout="@layout/loader" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>