<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.main.postMilestone.PostMilestoneFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBack"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="@dimen/distance_sm"
        android:layout_marginTop="@dimen/distance_sm"
        android:background="@null"
        android:contentDescription="@string/return_button"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_md"
        android:text="Complete Goal"
        android:textSize="@dimen/title_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGoalTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/pd_screen_horizontal"
        android:gravity="center"
        android:padding="@dimen/distance_sm"
        android:text="Goal Title"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/pd_screen_horizontal"
        android:layout_marginTop="@dimen/distance_md"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/tvGoalTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/pd_screen_horizontal"
        android:layout_marginTop="@dimen/distance_md"
        android:hint="@string/image"
        app:layout_constraintTop_toBottomOf="@+id/tlDescription">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivImagePreview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/distance_sm"
            android:layout_marginEnd="20dp"
            android:src="@drawable/place_holder"
            app:layout_constraintStart_toStartOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelectImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_sm"
        android:text="Add Image"
        app:layout_constraintEnd_toEndOf="@id/tlDescription"
        app:layout_constraintStart_toStartOf="@id/tlDescription"
        app:layout_constraintTop_toBottomOf="@id/tlImage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_md"
        android:paddingVertical="@dimen/btn_vertical_padding"
        android:text="@string/complete_goal"
        android:textAllCaps="false"
        android:textSize="@dimen/body_regular"
        app:layout_constraintEnd_toEndOf="@id/tlDescription"
        app:layout_constraintStart_toStartOf="@id/tlDescription"
        app:layout_constraintTop_toBottomOf="@id/btnSelectImage" />

    <include
        android:id="@+id/loaderMilestone"
        layout="@layout/loader" />

</androidx.constraintlayout.widget.ConstraintLayout>